--- a/index.css
+++ b/index.css
@@ -15,6 +15,13 @@ body {
     height: 100vh;
 }
 
+.historialContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+}
+
 .calculadora {
     display: grid;
     grid-template-columns: repeat(4, 75px);
@@ -23,6 +30,16 @@ body {
     padding: 15px;
     border-radius: 32px;
     box-shadow: 15px 10px 0px 5px #00000033;
+}
+
+.historial{
+    display: grid;
+    grid-template-columns: repeat(5, 50px);
+    
+    background-color: #76948c55;
+    padding: 15px;
+    border-radius: 32px;
+    box-shadow: #00000033;
 }
 
 button {
@@ -53,6 +70,20 @@ button:active{
     justify-content: space-between;
     word-break: break-all;
     box-shadow: 0px 0px 0px 10px #00000025;
+}
+
+.cuerpo{
+    grid-column: 1 / -1;
+    padding: 16px;
+    display:flex;
+    margin: 2px 2px 2px 2px;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: #fff;
+    border-radius: 32;
+    text-align:left;
+    justify-content: space-between;
+    word-break: break-all;
 }
 
 .col-2{
